# GrandmaAgenda

./: .gitignore  CMakeLists.txt  README.md  doxyfile
.github/: ci.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
db/: activities.csv
docs/markdown/: ArchitectureOverview.md  FlowchartOverview.md  SequenceDiagram.bakup
include/: scheduler.h  time_management.h  ui.h  utils.h
src/: main.c  scheduler.c  time_management.c  ui.c  utils.c
tests/: test_scheduler.c
